Closed Bug 417840 Opened 18 years ago Closed 18 years ago

"ASSERTION: Shouldn't be observing anymore" removing 'ref' attribute

Categories

(Core :: XUL, defect, P1)

x86
macOS
defect

Tracking

()

VERIFIED FIXED
mozilla1.9beta4

People

(Reporter: jruderman, Assigned: bent.mozilla)

References

Details

(Keywords: assertion, regression, testcase)

Attachments

(2 files)

Attached file testcase
Loading the testcase triggers: ###!!! ASSERTION: Shouldn't be observing anymore!: '!mObservedDocument', file /Users/jruderman/trunk/mozilla/content/xul/templates/src/nsXULTemplateBuilder.cpp, line 240 This assertion was added by bent in bug 416939.
This makes sure that we always remove the observer properly and consolidates the calls to the observer service. I just removed the warning about the null document because it doesn't seem to matter.
Assignee: nobody → bent.mozilla
Status: NEW → ASSIGNED
Attachment #304264 - Flags: review?(jst)
Flags: blocking1.9?
Target Milestone: --- → mozilla1.9beta4
(In reply to comment #1) > I just removed the warning about the null document Er, no I didn't. Different bug.
Attachment #304264 - Flags: superreview+
Attachment #304264 - Flags: review?(jst)
Attachment #304264 - Flags: review+
Flags: blocking1.9? → blocking1.9+
Fixed.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Priority: -- → P1
Resolution: --- → FIXED
Crashtest checked in.
Flags: in-testsuite+
verified fixed using the testcase and Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9pre) Gecko/2008050621 Firefox/3.0pre - no assertion on testcase --> Verified fixed
Status: RESOLVED → VERIFIED
Component: XP Toolkit/Widgets: XUL → XUL
QA Contact: xptoolkit.xul → xptoolkit.widgets
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: