Bug 417840 - "ASSERTION: Shouldn't be observing anymore" removing 'ref' attribute. r+sr=jst, a=blocking1.9+.